--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>jfreechart</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.2</version> <!-- ou a versão mais recente -->
+        </dependency>
+
     </dependencies>
 
     <properties>
